优化手机上使用细节